<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorD"
    android:layout_margin="2dp"
    android:background="@color/colorDark">
    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textColor="@color/colorWhite"
        android:textSize="45sp"
        android:textAlignment="gravity"
        android:gravity="bottom|end"
        android:paddingEnd="15dp"
        android:paddingStart="5dp"
        android:alpha="0.3"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_below="@id/input"
        android:layout_height="120dp"
        android:textColor="@color/colorWhite"
        android:textSize="50sp"
        android:text="@string/zero"
        android:textAlignment="gravity"
        android:gravity="bottom|end"
        android:paddingEnd="15dp"
        android:paddingStart="5dp"
        android:paddingBottom="5dp"/>
    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/result"
        android:background="@color/colorDarkGray"/>
    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="4"
        android:layout_below="@id/line"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:background="@color/colorDark">

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:text="@string/clear"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:textStyle="bold"
            android:layout_margin="1dp"/>
        <!--android:layout_rowSpan="3"
        -> It occupies 3 rows(but size remains same) and rest are shifted according to it.
        android:layout_columnSpan="3"
        -> It occupies 3 columns and rest are shifted according to it.-->
        <Button
            android:id="@+id/expo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/exponent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/delete"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/divide"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorCrimson"
            android:textColor="@color/colorWhite"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/seven"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/eight"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/nine"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorCrimson"
            android:textColor="@color/colorWhite"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/four"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"/>
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/five"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/six"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/subtract"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/minus"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorCrimson"
            android:textColor="@color/colorWhite"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/one"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/two"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/three"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorCrimson"
            android:textColor="@color/colorWhite"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/decimal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/dot"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorDarkGray"
            android:layout_margin="1dp"/>
        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/equal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:background="@color/colorCrimson"
            android:textColor="@color/colorWhite"
            android:layout_margin="1dp"/>
    </GridLayout>
</RelativeLayout>